2005-05-07  Benoît Dejean  <TazForEver@dlfp.org>

	* src/prettytable.c: (create_scaled_icon): Don't warn if icon is
	missing. Closes #300315.

2005-04-10  Benoît Dejean  <TazForEver@dlfp.org>

	* NEWS: Released 2.10.1.

2005-04-05  Benoît Dejean  <TazForEver@dlfp.org>

	* src/load-graph.c: (get_memory): Fixed display if there's no swap.

2005-04-01  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-03-31  Benoît Dejean  <TazForEver@dlfp.org>

	* src/interface.c: (create_sys_view): Fixed cpu/memory history resizing
	with the main window.
	Patched by Tero Huttunen <tero.huttunen@tut.fi>.
	Closes #172139.

2005-03-14  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in: Post release bump version.

2005-03-14  Benoît Dejean  <TazForEver@dlfp.org>

	* src/interface.c: (create_sys_view):
	* src/openfiles.c: (compare_open_files): don't use C++-style comments.
	Patch by jensgr@gmx.net (Jens Granseuer).

2005-03-07  Benoît Dejean  <TazForEver@dlfp.org>

	* NEWS: oops, forgot to commit.

2005-03-07  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in:
	* NEWS: Released 2.10.0.

2005-03-06  Benoît Dejean  <TazForEver@dlfp.org>

	* gnome-system-monitor.spec: Updated.

2005-02-28  Benoît Dejean  <TazForEver@dlfp.org>

	* NEWS: Released 2.9.92.

2005-02-25  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in: /me stupid. I've already post-bumped version.

2005-02-24  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in: post release bump 2.9.93.

2005-02-16  Benoît Dejean  <TazForEver@dlfp.org>

	* src/defaulttable.h:
	* src/prettytable.c: (new_application), (application_finished),
	(pretty_table_new), (pretty_table_get_icon), (pretty_table_free),
	(create_scaled_icon), (load_icon_for_commands), (cb_g_free),
	(cb_g_ptr_array_free), (load_default_table):
	* src/prettytable.h:
	* src/procman.h: Reworked so that icons loaded from the default table
	share their pixbuf.
	
	* src/procdialogs.c: (procdialog_create_hide_dialog):